# luxStudio

./: .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed_db.py
backend/alembic/: env.py
backend/alembic/versions/: 70fdb4b2b3e6_initial_manufacturers_and_luminaires.py  9b2e7a6d4c11_add_cri_to_luminaires.py
backend/app/: database.py  main.py
backend/app/models/: __init__.py  luminaire.py
backend/app/routers/: admin.py  calculate.py  ldt.py  report.py
backend/app/salvi_lighting/: __init__.py  batch.py  calc.py  eulumdat.py  r_table.py  render.py  solver.py
backend/app/schemas/: models.py
backend/app/services/: admin_service.py  calculator.py  excel_generator.py  geometry.py  i18n.py  ldt_loader.py  ldt_matcher.py  pdf_generator.py
backend/app/templates/: report.html
backend/data/: lux.db
backend/data/temp_ldt/: temp-004846c232274627a4288cc97bd7822e_CLAP_M_C28_30K_F2M2_VDR_SPUW_75W.ldt  temp-0c1756b5a2bb4b38b92191a13add1bf3_CLAP_M_C42_30K_F151_VDR_SPUW_200W.ldt  temp-c50753af1971452c9e62daa76628ba13_KRONOS_42C_40K_F151_VDR_SPUW_60W.ldt  temp-f09be2f071da4ac19e1bab67bb6e0083_CLAP_M_C42_30K_F2MD_VDR_SPUW_200W.ldt  temp-fccf7029b8874395b8af5895ee60a4ab_CLAP_M_C35_30K_F151_VDR_SPUW_100W.ldt
backend/generated_examples/: polar_orientation_check.html
backend/ldt/: CLAP_M_C28_30K_F151_VDR_SPUW_75W.ldt  CLAP_M_C28_30K_F2MD_VDR_SPUW_75W.ldt  CLAP_M_C42_30K_F151_VDR_SPUW_150W.ldt  CLAP_M_C42_30K_F2M2_VDR_SPUW_150W.ldt  CLAP_M_C42_30K_F2M2_VDR_SPUW_200W.ldt  CLAP_M_C42_30K_F2MD_VDR_SPUW_150W.ldt
(+76 files in other folders)
