[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lux-studio-backend"
version = "0.1.0"
description = "LUX Studio — Interactive road lighting design tool (backend)"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "weasyprint",
    "python-multipart",
    "salvi-lighting @ file:///C:/githubRepo/estudios%20luminicos",
]
